# playground

./: CMakeLists.txt  README.md  actonian_tenets.txt  animation_system.c  animation_system.h  assetstore.c  assetstore.h  collision_system.h  compile.bat  compile.sh  component.c  component.h  ecs.c  ecs.h  eventbus.h  game.c  hashmap.c  hashmap.h  main.c  math.c  math.h  os.h  render_system.c  render_system.h  system.c  system.h  toolchain.cmake  types.h  util.h
assets/materials/: bullet.mat  chopper.mat  jungle.mat  plain-red.mat  truck.mat
assets/shaders/: collision_debug.prog  collision_debug.vert  debug.vert  text.frag  text.vert  tilemap.frag  tilemap.prog  tilemap.vert  tilemap2.frag  tilemap2.vert  unit.frag  unit.prog  unit.vert
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: animation_system.c  animation_system.cpp  animation_system.h  camera_movement_system.c  camera_movement_system.cpp  camera_movement_system.h  collision_system.c  collision_system.cpp  collision_system.h  component.c  component.h  components.c  components.h  damage_system.c  damage_system.cpp  damage_system.h  entity_flags.h  events.c  events.cpp  events.h  game.c  game.cpp  game.h  hit_detection_system.c  hit_detection_system.cpp  hit_detection_system.h  input_system.c  input_system.cpp  input_system.h  main.c  main.cpp  movement_system.c  movement_system.cpp  movement_system.h  player_system.c  player_system.cpp  player_system.h  projectile_emitter_system.c  projectile_emitter_system.cpp  projectile_emitter_system.h  (+13 more)
src/core/: allocators.c  allocators.cpp  allocators.h  arena.c  arena.h  assetstore.c  assetstore.cpp  assetstore.h  componentbase.c  componentbase.cpp  componentbase.h  ecs.c  ecs.cpp  ecs.h  eventbus.c  eventbus.cpp  eventbus.h  hashmap.c  hashmap.cpp  hashmap.h  keyvalueparser.c  keyvalueparser.cpp  keyvalueparser.h  log.c  log.cpp  log.h  math.c  math.cpp  math.h  os.h  os_linux.c  os_linux.cpp  os_win.c  os_win.cpp  renderer.c  renderer.cpp  renderer.h  ringbuf.cpp  ringbuf.h  services.c  (+20 more)
